--- a/build-a-survey-form/index.html
+++ b/build-a-survey-form/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Valorant Player Survey Form</title>
     <link rel="stylesheet" href="index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <a href="../../index.html">Back</a>
